--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         }
     </style>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="/https://swillycoder.github.io/favicon.ico">
 </head>
 <body>
     <canvas id = "canvas"></canvas>
